--- a/Cv/cv.html
+++ b/Cv/cv.html
@@ -10,103 +10,110 @@
 <body>
    
     <main>
-        <!-- header debut -->
-        <header>
-            <img src="image/img1.jpg" alt="image" width="10%" height="15%">
-            <div class="nom">
-            <h1 class="nom-t">Hawa Coulibaly</h1>
-            <div class="m1">
-                 <h4> Développeuse Full Stack</h4>
+        <div class="main">
+            <div class="top">
+                <!-- header debut -->
+                <!-- <header> -->
+                    <div class="img-ct">
+                        <div class="image"></div>
+                        <!-- <img src="image/img1.jpg" alt="image" width="10%" height="15%"> -->
+                    </div>
+                    <div class="nom">
+                        <div class="ct">
+                            <h1 class="nom-t">Hawa Coulibaly</h1>
+                            <div class="m1">
+                                <h4> Développeuse Full Stack</h4>
+                            </div>
+                            <p class="m2">Le lorem ipsum est, en imprimerie, une suite de mots sans signification utilisée <br> à titre provisoire pour calibrer une mise en page, le texte définitif <br> venant remplacer le faux-texte dès qu'il est prêt ou que la mise en page est achevée. Généralement, on utilise un texte en faux latin,<br> le Lorem ipsum ou Lipsum.</p>
+                        </div>
+                    </div>
+                <!-- </header> -->
+                <!-- header fin -->
             </div>
-            <p class="m2">Le lorem ipsum est, en imprimerie, une suite de mots sans signification utilisée <br> à titre provisoire pour calibrer une mise en page, le texte définitif <br> venant remplacer le faux-texte dès qu'il est prêt ou que la mise en page est achevée. Généralement, on utilise un texte en faux latin,<br> le Lorem ipsum ou Lipsum.</p>
+            <div class="bottom">
+                <!-- section left debut -->
+                <section class="left">
+                    <div class="ct">
+                        <div class="contact">
+                            <h3>Contact</h3>
+                            <p class="addr"><img src="image/phone.svg" alt="phone"><span>83014698</span></p>
+                            <p class="addr"><img src="image/envelope-mail.svg" alt="mail"><span>hawavoulibaly656@gmail.com</span></p>
+                            <p class="addr"><img src="image/mail.svg" alt="maps"><span>kalaban coura Bamako Mali</span></p>
+                            <p class="addr"><img src="image/linkedin.svg" alt="linkedin"><span>linkedin</span></p>
+                        </div>
+                        <div class="competences">
+                            <h3>COMPETENCES</h3>
+                            <h4>Professionnelles</h4>
+                            <ul>
+                                <li>Ms office</li>
+                                <li>Html/CSS </li>
+                                <li>Javascript</li>
+                                <li>PHP</li>
+                                <li>Java</li>
+                                <li>SQL</li>
+                                <li>Photoshop</li>
+                                <li>Figma</li>
+                                <li>Wordpress</li>
+                            </ul>
+
+                        </div>
+                        <div class="langues">
+                            <h3>Langues</h3>
+                            <ul>
+                                <li> Anglais : Passable</li>
+                                <li>Français : Bien</li>
+                                <li>Bambara : Bien</li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- section left fin -->
+
+                <!-- section right debut -->
+                <section class="right">
+                    <div class="ct">
+                        <div class="Experience">
+                            <h3>| EXPERIENCES PROFESSIONNELLES</h3>
+                            <h5>NOM ENTREPRISE|Poste occupe</h5>
+                            <p>Le lorem ipsum est, en imprimerie, une suite de mots<br> sans signification utilisée  à titre provisoire pour</p>
+
+                            <h5>NOM ENTREPRISE|Poste occupe</h5>
+                            <p>Le lorem ipsum est, en imprimerie, une suite de mots<br> sans signification utilisée  à titre provisoire pour</p>
+
+                            <h5>NOM ENTREPRISE|Poste occupe</h5>
+                            <p>Le lorem ipsum est, en imprimerie, une suite de mots<br> sans signification utilisée  à titre provisoire pour</p>
+
+                            <h5>NOM ENTREPRISE|Poste occupe</h5>
+                            <p>Le lorem ipsum est, en imprimerie, une suite de mots<br> sans signification utilisée  à titre provisoire pour</p>
+
+                        </div>
+                        <div class="formation">
+                            <h3> | FORMATIONS</h3>
+                            <h5>ORANGE DIGITAL KALANSO</h5>
+                            <p>Developpeuse Full Stack</p>
+
+                            <h5>EXPERT-LAB TECHNOLOGY</h5>
+
+                            <h5>ECOLE NATIONALE D'INGENIEURS ENI-ABT</h5>
+                            <p>Licence en Informatique et Télécommunications</p>
+
+                            <h5>EPIM</h5>
+                            <p>Dévenir webmaster</p>
+
+                            <h5>CHEICK MODIBO DIARRA</h5>
+                            <P>Maintenance des ordinateurs</P>
+
+                            <h5>JEUNESS'ARTS</h5>
+                            <P> Ecole du slam</P>
+
+
+                        </div>
+                    </div>
+
+                </section>
+                <!-- section right fin -->
             </div>
-        </header>
-        <!-- header fin -->
-
-        <!-- section left debut -->
-        <section class="left">
-            <div>
-            <div class="contact">
-                <h3>Contact</h3>
-                <p><img src="image/phone.png" alt="phone"> 83014698</p>
-                <p><img src="image/mail.png" alt="mail"> hawavoulibaly656@gmail.com</p>
-                <p><img src="image/maps.png" alt="maps"> kalaban coura Bamako Mali</p>
-                <p><img src="image/github.png" alt="github"> https://github.com/Hawa656</p>
-            </div>
-            <div class="competences">
-                <h3>COMPETENCES</h3>
-                <h4>Professionnelles</h4>
-                <ul>
-                    <li>Ms office</li>
-                    <li>Html/CSS </li>
-                    <li>Javascript</li>
-                    <li>PHP</li>
-                    <li>Java</li>
-                    <li>SQL</li>
-                    <li>Photoshop</li>
-                    <li>Figma</li>
-                    <li>Wordpress</li>
-                </ul>
-
-            </div>
-            <div class="langues">
-                <h3>Langues</h3>
-                <ul>
-                    <li> Anglais : Passable</li>
-                    <li>Français : Bien</li>
-                    <li>Bambara : Bien</li>
-                </ul>
-            </div>
-            </div>
-        </section>
-
-        <!-- section left fin -->
-
-        <!-- section right debut -->
-        <section class="right">
-            <div>
-                <div class="Experience">
-                    <h3>| EXPERIENCES PROFESSIONNELLES</h3>
-                    <h5>NOM ENTREPRISE|Poste occupe</h5>
-                    <p>Le lorem ipsum est, en imprimerie, une suite de mots<br> sans signification utilisée  à titre provisoire pour</p>
-
-                    <h5>NOM ENTREPRISE|Poste occupe</h5>
-                    <p>Le lorem ipsum est, en imprimerie, une suite de mots<br> sans signification utilisée  à titre provisoire pour</p>
-
-                    <h5>NOM ENTREPRISE|Poste occupe</h5>
-                    <p>Le lorem ipsum est, en imprimerie, une suite de mots<br> sans signification utilisée  à titre provisoire pour</p>
-
-                    <h5>NOM ENTREPRISE|Poste occupe</h5>
-                    <p>Le lorem ipsum est, en imprimerie, une suite de mots<br> sans signification utilisée  à titre provisoire pour</p>
-
-                </div>
-                <div class="formation">
-                    <h3> | FORMATIONS</h3>
-                    <h5>ORANGE DIGITAL KALANSO</h5>
-                    <p>Developpeuse Full Stack</p>
-
-                    <h5>EXPERT-LAB TECHNOLOGY</h5>
-
-                    <h5>ECOLE NATIONALE D'INGENIEURS ENI-ABT</h5>
-                    <p>Licence en Informatique et Télécommunications</p>
-
-                    <h5>EPIM</h5>
-                    <p>Dévenir webmaster</p>
-
-                    <h5>CHEICK MODIBO DIARRA</h5>
-                    <P>Maintenance des ordinateurs</P>
-
-                    <h5>JEUNESS'ARTS</h5>
-                    <P> Ecole du slam</P>
-
-
-                </div>
-            </div>
-
-        </section>
-        <!-- section right fin -->
-        <div class="skr">
-
         </div>
     </main>
    
